--- a/src/style.css
+++ b/src/style.css
@@ -23,9 +23,8 @@ body {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
+  height: 100vh;
   text-align: center;
 }
 
