--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,15 @@
 :root {
+  --light-main: #ffffff;
+  --light-secondary: #c7c6c5;
+  --dark-main: #312e2b;
+  --dark-secondary: #272522;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--light-main);
+  background-color: var(--dark-main);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -26,11 +30,4 @@ body {
   width: 100%;
   height: 100vh;
   text-align: center;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
 }
