--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -13,3 +13,9 @@
     "a2 b2 c2 d2 e2 f2 g2 h2"
     "a1 b1 c1 d1 e1 f1 g1 h1";
 }
+
+@media (max-aspect-ratio: 1/1) {
+  .board {
+    max-width: calc(100vh - 200px);
+  }
+}
